Chatbot Frontend Changes -  Reordered text area reseting to before getting a response from bot to appear faster - Added buttons to Scroll-to-top/bottom of chats given chat is long enough - Implemented a loading/thinking animation for the chatbot - Added an icon to represent the chatbot visually and removed text background color for visual reasons - Fixed message overflow issue with 'break-words' tailwind css styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,28 @@ body {
   }
 }
 
+/* Custom scrollbar for WebKit browsers */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #006241; /* Color of the scrollbar handle */
+  border-radius: 10px;       /* Rounded corners on the scrollbar handle */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #09ad5f; /* Color on hover */
+}
+
+
+/* Scrollbar for Firefox non-webkit browser*/
+.scroll-container {
+  scrollbar-width: thin;      
+  scrollbar-color: #006241 #f1f1f1; /* Thumb color and track color */
+}
+
 /* Hide arrows in input of type=number fields for Webkit browsers (Chrome, Safari, Edge) */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button {
